Change index content

--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@ layout: default
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">About</h1>
-  <p class="description">
-    I'm a <b>bioinformatician</b> and <b>computational biologist</b>.
+  <h1 class="pageTitle">Hello</h1>
+  <p class="description">I'm a <b>bioinformatician</b> and <b>computational biologist</b>.</p>
 
-    Currently, in my post-doc, I'm working on the study of gut microbiota using
+
+  <p class="description">Currently, in my post-doc, I'm working on the study of gut microbiota using
     <b>metagenomic</b> and <b>metatranscriptomic</b> approaches. I'm developping
     <a href="http://asaim.github.io/">ASaiM</a>, a bioinformatic environment to
     study gut microbiota smaples with an analysis framework using Galaxy, an 
-    expert database and a web interface to interact with the tools.
+    expert database and a web interface to interact with the tools.</p>
 
-    During my PhD, I worked on reductive genome evolution of the cyanobacteria
+  <p class="description">During my PhD, I worked on reductive genome evolution of the cyanobacteria
     <i>Prochlorococcus</i>. To study this particular phenomenon, I used two 
     approaches:
 
     <ul>
       <li><b><i>In silico</i> experimental evolution</b> with <a href="http://www.aevol.fr/">aevol platform</a> </li>
-      <li><b>Comparative genomics</b> with <b>phylogeny</b>
-    </u>
+      <li><b>Comparative genomics</b> with <b>phylogeny</b></li>
+    </ul>
 
     With the combination of these two approaches, I proposed an hypothetic history 
     for reductive genome evolution of <i>Prochlorococcus</i>
